--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="The classic grid game, can you get three in a row?"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
